Style Forgot Password Page. I added the styles for the Forgot Password request Page. I believe there is another related page, where you get re-directed from the email to reset your password. I think I will be going there next. This is actually going far more smoothly than I had thought. I am pretty much to the little misc pages that require a small amount of styling. (I believe, I'm sure there is one or 2 larger style requirement pages that I haven't gotten into yet, but most of this is looking pretty good.) I also made a couple small fixes in the login page. And added the "Forgot Password?" link to the blurb at the top. There wasn't a great place to put it in the actual login box, but I think it looks fine there. I do need to make a note that the continue button for the register section of the login page logs you in (when it should just re-direct you to the registration form.) Oh, the registration form is a page I have yet to style. I knew there were a couple bigger ones. That's one of them. I think thre's a second or third bigger one that I'm not thinking of right now, but I'm mostly going through this by actual links on the site, so i'll find them when i land on an unstyled page. I figure this is the best method, because the most important pages to style are the ones we currently have links to on the site. (that just seems to make sense.) So I'll look into the password reset page, and then the registration page. I will do a commit after the password reset is done, but I don't expect this to be too much trouble. Then I will begin on the registration page. Oh, also, I quickly took care of the logout page. this page simply shows you a little message that you've been logged out and then re-directs to the home page after 5 seconds. super simple, but required none-the-less. And I also fixed some errors in the "global.css" page, which sets some defaults and such, but I was getting error messages about it, and that's never a good thing, so i took care of that too. Update

--- a/skin/frontend/default/rofcustom/css/cart-checkout.css
+++ b/skin/frontend/default/rofcustom/css/cart-checkout.css
@@ -1067,12 +1067,15 @@ img, button, input {
         padding: 10px 0 0;
     }
 
+    .account-box .buttons-set,
     .my-account .buttons-set {
         clear: left;
         float: right;
         margin: 10px 20px;
     }
 
+    .account-box .back-link,
+    .account-box .account-sub-button,
     .my-account .back-link,
     .my-account .account-sub-button {
         margin: 0;
@@ -1081,12 +1084,19 @@ img, button, input {
         height: 30px;
     }
 
+    .account-box .back-link,
     .my-account .back-link {
         background: #8a6499 url('../images/account-buttons-back-link.png') center center no-repeat;
     }
 
+    .account-box .save-button,
     .my-account .save-button {
         background: #8a6499 url('../images/account-buttons-save-button.png') center center no-repeat;
+    }
+
+    .account-box .submit-button,
+    .my-account .submit-button {
+        background: #8a6499 url('../images/account-buttons-submit-button.png') center center no-repeat;
     }
 
     /* Login / Register Page Styles
